name:                persistent-spatial
version:             0.1.0.0
-- synopsis:
description:         A type for storing geographic coordinates that can be used with any database which supports Word64.
homepage:            https://github.com/george-steel/persistent-spatial#readme
license:             MIT
license-file:        LICENSE
author:              George Steel
maintainer:          george.steel@gmail.com
copyright:           2019 Satsuma Labs
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -Wno-unused-imports
  exposed-modules:     Data.Morton
                       Data.LatLong
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , lens
                     , http-api-data
                     , text
                     , persistent
  default-language:    Haskell2010


test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  ghc-options:         -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -Wno-unused-imports
  main-is:             Main.hs
  build-depends:       persistent-spatial
                     , base >= 4.7 && < 5
                     , aeson
                     , lens
                     , http-api-data
                     , text
                     , hspec
                     , QuickCheck
  default-language:    Haskell2010



source-repository head
  type:     git
  location: https://github.com/george-steel/persistent-spatial
